# valita

./: app.vala  meson.build
LICENSE.md/: LICENSE.md
data/: com.github.antonioJASR.valita.appdata.xml  com.github.antonioJASR.valita.desktop  com.github.antonioJASR.valita.gschema.xml
src/: app.vala
